--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,33 @@
-node_modules/
-.expo/
-dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# macOS
-.DS_Store
+# Dependency directories
+node_modules/
+
+# Build files
+dist/
+build/
+
+# IDEs and editors
+.idea/
+.vscode/
+
+# IDE - VIM
+*.swp
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Uploaded files
+public/uploads/
+
+# Local cache for organizing node_modules between builds
+.local-cache/
