--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-notifications": "^0.17.0",
     "expo-permissions": "^14.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
